--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
+  flutter_tts: ^4.2.2
   google_generative_ai: ^0.4.6
   shared_preferences: ^2.5.3
 
